--- a/resources/starter-site/_layouts/default.html
+++ b/resources/starter-site/_layouts/default.html
@@ -11,7 +11,7 @@
     <div class="container">
        <div class="header"><h2>My blog</h2></div>
        <div class="content">
-         <%= content_for_layout %>
+         <%= content %>
        </div>
        <div class="footer"></div>
     </div>
