--- a/resources/starter-site/_layouts/default.html
+++ b/resources/starter-site/_layouts/default.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My starter site</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-       <div class="header"><h2>My blog</h2></div>
-       <div class="content">
-         <%= content %>
-       </div>
-       <div class="footer"></div>
-    </div>
-  </body>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title><%= page.title %></title>
+        <meta name="viewport" content="width=device-width">
+
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
+
+        <!-- Custom CSS -->
+        <!-- <link rel="stylesheet" href="/css/main.css"> -->
+        <script src="/assets/js/jquery.min.js"></script>
+        <script src="/assets/js/jquery.browser.js"></script>
+        <script src="/assets/js/highlight/highlight.pack.js"></script>
+        <link rel="stylesheet" href="/assets/js/highlight/styles/default.css">
+        
+        <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">        
+        <link rel="alternate" type="application/rss+xml" title="Rig Some Light Feed" href="http://rigsomelight.com/feed.xml">
+        <link rel="stylesheet" href="/assets/css/fonts.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
+    </head>
+    <body>
+
+        <div class="container">
+          <div class="site">
+            
+            <ul class="breadcrumb">
+              <li class="active"><a href="/">Bruce Hauman</a></li>
+            </ul>
+
+                <%= content %>
+
+            <div class="footer">
+              <div class="contact">
+                <p>
+                  Bruce Hauman<br />
+                  Programmer<br />
+                  bhauman@gmail.com
+                </p>
+              </div>
+              <div class="contact">
+                <p>
+                  <a href="http://github.com/bhauman/">github.com/bhauman</a><br />
+                  <a href="http://twitter.com/bhauman/">twitter.com/bhauman</a><br />
+                  <a href="/feed.xml">blog feed</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> <!-- /container -->
+        <script>hljs.initHighlightingOnLoad();</script>
+    </body>
+</html>
