--- a/resources/public/css/cmsnew.css
+++ b/resources/public/css/cmsnew.css
@@ -168,3 +168,13 @@ body.select-site {
   margin-bottom: 10px;
 }
 
+.navbar-icon-left {
+   margin-right: 15px;
+}
+
+.navbar-icon {
+   font-size: 1.5em;
+   margin-top: 11px;
+   color: #666;
+}
+
