--- a/resources/public/css/cmsnew.css
+++ b/resources/public/css/cmsnew.css
@@ -60,9 +60,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 
-
 [data-pageitem] {
    margin-bottom: 30px;
+   min-height: 1em;
 }
 
 .tooltipper {
